// DeP2P DHT Protocol Definitions
// Kademlia DHT 协议消息定义

syntax = "proto3";

package dep2p.dht;

option go_package = "github.com/dep2p/dep2p/pkg/proto/dht";

// MessageType DHT 消息类型
enum MessageType {
  PUT_VALUE = 0;      // 存储值
  GET_VALUE = 1;      // 获取值
  ADD_PROVIDER = 2;   // 添加提供者
  GET_PROVIDERS = 3;  // 获取提供者
  FIND_NODE = 4;      // 查找节点
  PING = 5;           // Ping
  
  // v2.0 新增：PeerRecord 操作
  PUT_PEER_RECORD = 6;  // 发布 PeerRecord
  GET_PEER_RECORD = 7;  // 获取 PeerRecord
}

// ConnectionType 连接类型
enum ConnectionType {
  NOT_CONNECTED = 0;  // 未连接
  CONNECTED = 1;      // 已连接
  CAN_CONNECT = 2;    // 可以连接
  CANNOT_CONNECT = 3; // 无法连接
}

// Peer 节点信息
message Peer {
  bytes id = 1;
  repeated bytes addrs = 2;
  ConnectionType connection = 3;
}

// Message DHT 协议消息
message Message {
  MessageType type = 1;
  
  bytes key = 2;          // 键（用于 PUT/GET）
  bytes value = 3;        // 值（用于 PUT）
  
  int32 closer_peers = 8; // 更接近的节点数量
  repeated Peer providers = 9; // 提供者列表
  repeated Peer closer = 10;   // 更接近的节点列表
  
  // v2.0 新增：PeerRecord 字段
  bytes signed_peer_record = 11;  // 签名的 PeerRecord（序列化字节）
}

// Record DHT 记录
message Record {
  bytes key = 1;
  bytes value = 2;
  bytes author = 3;
  bytes signature = 4;
  uint64 time_received = 5;
}
